<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_style">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="offer">Пользовательское соглашение</string>
    <string name="SettingsSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="SettingsSubText">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="SettingsText">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_hint">Поиск</string>
    <string name="input_hint">Поиск</string>
    <string name="clear_history">Очистить историю</string>
    <string name="search_history_hint">Вы искали</string>
    <string name="refresh">Обновить</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="communication_problem">Проблемы со связью\n\nЗагрузка не удалась.Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="mediateca_tracks_text">Ваша медиатека пуста \n</string>
    <string name="mediateca_playlist_text">Вы не создали \n ни одного плейлиста</string>
    <string name="mediateca_first_fragment_name">Избранные треки</string>
    <string name="mediateca_second_fragment_name">Плейлисты</string>
    <string name="zero_time">00:00</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="new_playlist_nate_hint_text">Название*</string>
    <string name="new_playlist_description_hint_text">Описание</string>
    <string name="create">Создать</string>
    <string name="close_play_list_title">Завершить создание плейлиста?</string>
    <string name="close_play_list_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="positive_button">Завершить</string>
    <string name="negative_button">Отмена</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_is_added_to_playlist">"Добавлено в плейлист %s"</string>
    <string name="track_is_added">"Трек уже добавлен в плейлист %s"</string>
    <string name="delete_track">Удалить трек</string>
    <string name="delete_track_description">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete">Удалить</string>
    <string name="share_title">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="delete_playlist_dialog">Хотите удалить плейлист «%1$s»?</string>
    <string name="edit_title">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет треков.</string>

</resources>
