<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/title"
        android:textAppearance="@style/title"
        style="@style/MessageTextStyle"/>

    <Button style="@style/MainButtonStyle"
        android:id="@+id/button1"
        android:layout_marginTop="40dp"
        android:text="@string/search"
        app:icon="@drawable/search" />

    <Button style="@style/MainButtonStyle"
        android:id="@+id/button2"
        android:text="@string/library"
        app:icon="@drawable/library" />

    <Button style="@style/MainButtonStyle"
        android:id="@+id/button3"
        android:layout_marginBottom="28dp"
        android:text="@string/settings"
        app:icon="@drawable/settings" />

</LinearLayout>