<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Settings" >

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:backgroundTint="@color/but_main_col"
        android:text="@string/settings"
        android:textSize="22sp"
        android:textColor="@color/black"
        app:icon="@drawable/vector"
        app:iconPadding="28dp"
        app:iconTint="@color/black" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/dark_style"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/but_main_col"
        android:text="@string/share"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:icon="@drawable/share"
        app:iconGravity="end"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/but_main_col"
        android:text="@string/support"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:icon="@drawable/support"
        app:iconGravity="end"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/but_main_col"
        android:text="@string/offer"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:icon="@drawable/forward"
        app:iconGravity="end"
        app:iconTint="@color/black" />
</LinearLayout>