<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.ui.SettingsFragment"
    android:theme="@style/SettingsActivityTop">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/settings"
            android:textSize="22sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.SwitchCompat
        style="@style/SettingsLinearLayout"
        android:id="@+id/switch2"
        android:paddingTop="@dimen/setting_switch_padding_top_and_bottom"
        android:paddingBottom="@dimen/setting_switch_padding_top_and_bottom"
        android:text="@string/dark_style"
        android:textAlignment="viewStart"
        android:textSize="@dimen/setting_but_text_size"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        android:theme="@style/SettingsActivityIcon"/>

    <LinearLayout
        style="@style/SettingsLinearLayout">
        <TextView
            android:layout_marginVertical="@dimen/setting_but_text_vertical"
            android:text="@string/share"
            style="@style/SettingsText"/>
        <ImageView
            android:id="@+id/share"
            style="@style/SettingsImageView"
            android:src="@drawable/share"
            android:theme="@style/SettingsActivityIcon"/>
    </LinearLayout>

    <LinearLayout
        style="@style/SettingsLinearLayout">
        <TextView
            android:layout_marginVertical="@dimen/setting_but_text_vertical"
            android:text="@string/support"
            style="@style/SettingsText"/>
        <ImageView
            android:id="@+id/support"
            style="@style/SettingsImageView"
            android:src="@drawable/support"
            android:theme="@style/SettingsActivityIcon" />

    </LinearLayout>

    <LinearLayout
        style="@style/SettingsLinearLayout">
        <TextView
            android:layout_marginVertical="@dimen/setting_but_text_vertical"
            android:text="@string/offer"
            style="@style/SettingsText"/>
        <ImageView
            android:id="@+id/forward"
            style="@style/SettingsImageView"
            android:src="@drawable/forward"
            android:theme="@style/SettingsActivityIcon" />

    </LinearLayout>

</LinearLayout>