<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mediateca.ui.new_playlist.NewPlaylistFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/BackIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/new_playlist"
            android:textSize="22sp" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/newPlayListImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/new_playlist_shape"
        android:src="@drawable/add_photo"
        android:scaleType="center"
        android:layout_margin="32dp"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playListName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/PlayListInputLayoutStyle"
        app:layout_constraintTop_toBottomOf="@id/newPlayListImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playListNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_playlist_nate_hint_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playListDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/PlayListInputLayoutStyle"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/playListName"
        app:layout_constraintStart_toStartOf="@id/playListName"
        app:layout_constraintEnd_toEndOf="@id/playListName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playListDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_playlist_description_hint_text" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/createBut"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:text="@string/create"
        android:textAlignment="center"
        android:gravity="center"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="32dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/btn_create_play_list_selector" />

</androidx.constraintlayout.widget.ConstraintLayout>