<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/YP_Light_Gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@android:color/transparent"
        android:src="@drawable/back" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitCenter"
        tools:src="@drawable/placeholder"/>


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image"
        android:textColor="@color/black"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        tools:text="Best songs 2021" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="8dp"
            android:paddingStart="16dp"
            tools:text="2022"/>

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="8dp"
            android:paddingStart="16dp"
            android:textColor="@color/black"
            tools:text="300 минут • 98 треков"/>

    <ImageButton
        android:id="@+id/share"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/share"
        android:background="@android:color/transparent"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/duration"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/more"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_more"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/duration"
        app:layout_constraintStart_toEndOf="@id/share" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/tracksBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="240dp"
        style="@style/bottomSheetStyle"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        tools:visibility="gone">

        <View
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            style="@style/dividerStyle"/>

        <TextView
            android:id="@+id/noTracksInPlayListTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/no_tracks_in_playlist" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/track_item" />
        
    </LinearLayout>

    <View android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:background="#99000000" />

    <LinearLayout
        android:id="@+id/moreBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:focusable="true"
        android:clickable="true"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="300dp"
        style="@style/bottomSheetStyle"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            style="@style/dividerStyle"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp">

            <ImageView
                android:id="@+id/imagePlayList"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/placeholder" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toTopOf="@+id/tracksCount"
                app:layout_constraintStart_toEndOf="@id/imagePlayList"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="Best songs 2021" />

            <TextView
                android:id="@+id/tracksCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SecondaryText"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/name"
                app:layout_constraintTop_toBottomOf="@+id/name"
                tools:text="98 треков" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textShare"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/share_title"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/edit_playlist"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/delete_playlist"
            android:gravity="center_vertical"/>
        

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>